<resources>
    <string name="app_name">KapEp</string>
    <string name="title">title</string>
    <string name="please_change_controy">请选择国家</string>
    <string name="please_number">请输入手机号</string>
    <string name="please_password">请输入密码</string>
    <string name="please_code">请输入验证码</string>
    //权限
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    //登陆
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="regist">注册</string>
    //设置密码
    <string name="please_new_password">请输入新密码</string>
    <string name="please_passwordagain">请在输入一次</string>

    //忘记密码页面
    <string name="please_put_email">忘记密码</string>
    <string name="yes">确定</string>
    <string name="next">下一步</string>

    //完善资料
    <string name="complete_finish">注册完成</string>
    <string name="complete_kapep"><![CDATA[点击注册完成按钮表示,您已阅读并愿意遵守 <KapEp服务条款>]]></string>

    // 个人设置页
    <string name="mineseting_updateContact">上传通讯录</string>
    <string name="mineseting_cleanCache">清除缓存</string>
    <string name="mineseting_aboutUs">关于我们</string>
    <string name="mineseting_logout">退出登录</string>

    // 个人详情页
    <string name="accountdetail_clickimage">点击更换头像</string>
    <string name="accountdetail_changename">修改信息</string>
    <string name="accountdetail_chengepassword">修改密码</string>
    <string name="accountdetail_nike">昵称</string>
    <string name="accountdetail_number">账号</string>
    <string name="accountdetail_occ">职业</string>
    <string name="accountdetail_sex">性别</string>
    <string name="accountdetail_place">地点</string>
    <string name="accountdetail_email">邮箱</string>
    //消息
    <string name="message_see">查看</string>
    <string name="message_agress">同意</string>
    <string name="message_refuse">拒绝</string>

    //搜索好友页面
    <string name="search_cancle">取消</string>
</resources>
