<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/nav_custom_titlebar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_interval_v"/>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/accountDetail_imageview"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/minecenter_imageview_size"
        android:layout_height="@dimen/minecenter_imageview_size"
        app:civ_border_width="0dp"
        app:civ_border_color="@color/Bank_White_ffffff"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountdetail_clickimage"
        android:textColor="@color/Bank_Black_565656"
        android:textSize="10dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapShowAccountDetailTextView
        android:id="@+id/accountDetail_nikename"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_account_text_height"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        app:AccountDetail_title_text="@string/accountdetail_nike"
        app:AccountDetail_content_textcolor="@color/Bank_White_ffffff"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapShowAccountDetailTextView
        android:id="@+id/accountDetail_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_account_text_height"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        app:AccountDetail_title_text="@string/accountdetail_number"
        app:AccountDetail_content_textcolor="@color/Bank_White_ffffff"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapShowAccountDetailTextView
        android:id="@+id/accountDetail_occ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_account_text_height"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        app:AccountDetail_title_text="@string/accountdetail_occ"
        app:AccountDetail_content_textcolor="@color/Bank_Blue_2f95fb"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapShowAccountDetailTextView
        android:id="@+id/accountDetail_sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_account_text_height"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        app:AccountDetail_title_text="@string/accountdetail_sex"
        app:AccountDetail_content_textcolor="@color/Bank_White_ffffff"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapShowAccountDetailTextView
        android:id="@+id/accountDetail_place"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_account_text_height"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        app:AccountDetail_title_text="@string/accountdetail_place"
        app:AccountDetail_content_textcolor="@color/Bank_White_ffffff"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapShowAccountDetailTextView
        android:id="@+id/accountDetail_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minecenter_account_text_height"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        app:AccountDetail_title_text="@string/accountdetail_email"
        app:AccountDetail_content_textcolor="@color/Bank_White_ffffff"/>
    // 填充剩余区域
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <com.example.jing.kapep.View.KapBigChangeButton
        android:id="@+id/accountDetail_changeDetail"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:custom_text_normal="@string/accountdetail_changename"
        app:custom_textColor_normal="@color/Bank_White_ffffff"
        app:custom_backColor_normal="@color/Bank_Blue_2f95fb" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_interval_v"/>

    <com.example.jing.kapep.View.KapBigChangeButton
        android:id="@+id/accountDetail_changePassWord"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_marginRight="@dimen/login_edittext_interval_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:custom_text_normal="@string/accountdetail_chengepassword"
        app:custom_textColor_normal="@color/Bank_White_ffffff"
        app:custom_backColor_normal="@color/Bank_Blue_2f95fb" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_interval_v"/>
</LinearLayout>