<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/nav_custom_titlebar"/>
    <com.example.jing.kapep.View.KapAlertBankShowView
        android:id="@+id/forget_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:title_isShow="false"
        app:button_text="@string/yes">
        //只放置一个布局用来居中
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edittext_interval_bigsmall_v" />
            <com.example.jing.kapep.Activitys.LoginActivity.LoginEditTextView
                android:id="@+id/forget_passwordview"
                android:layout_width="@dimen/login_edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:custom_image="@mipmap/login_password_b"
                app:custom_placeholdText="@string/please_new_password"
                app:custom_lineIsShow="false"
                app:custom_textColor="@color/gray"
                app:custom_backColor="@color/Bank_Black_2b2b2b"
                app:custom_hintColor="@color/BANK_GRAY_9b9b9b"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edittext_interval_v" />
            <com.example.jing.kapep.Activitys.LoginActivity.LoginEditTextView
                android:id="@+id/forget_againview"
                android:layout_width="@dimen/login_edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:custom_image="@mipmap/login_password_b"
                app:custom_placeholdText="@string/please_passwordagain"
                app:custom_lineIsShow="false"
                app:custom_textColor="@color/gray"
                app:custom_backColor="@color/Bank_Black_2b2b2b"
                app:custom_hintColor="@color/BANK_GRAY_9b9b9b"/>
        </LinearLayout>
    </com.example.jing.kapep.View.KapAlertBankShowView>
</LinearLayout>