<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/message_list_iteam_height">
    <ImageView
        android:id="@+id/message_iteam_image"
        android:layout_width="@dimen/listener_list_iteam_image_height"
        android:layout_height="@dimen/listener_list_iteam_image_height"
        android:layout_marginTop="@dimen/login_edittext_interval_v"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:src="@mipmap/mine_placehold"/>
    <TextView
        android:id="@+id/message_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/message_iteam_image"
        android:layout_marginLeft="@dimen/login_edittext_interval_v"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:text="121212456"
        android:textSize="@dimen/listener_list_iteam_textSize"
        android:textColor="@color/BANK_GRAY_b7b7b7"
        />
    <TextView
        android:id="@+id/message_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/message_content_text"
        android:layout_below="@id/message_content_text"
        android:layout_gravity="center_vertical"
        android:text="121212456"
        android:textSize="@dimen/message_list_time_textSize"
        android:textColor="@color/BANK_GRAY_6f6f6f"
        />
    // 查看 确定 取消
    <com.example.jing.kapep.View.KapPendingButton
        android:id="@+id/message_button_see"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/message_list_button_width"
        android:layout_height="@dimen/message_list_button_height"
        app:pendingButton_backcolor="@color/Bank_Blue_2f95fb"
        app:pendingButton_button_text="@string/message_see"
        />
    <com.example.jing.kapep.View.KapPendingButton
        android:id="@+id/message_button_refuse"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/message_button_see"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/message_list_button_width"
        android:layout_height="@dimen/message_list_button_height"
        app:pendingButton_backcolor="@color/BANK_GRAY_535353"
        app:pendingButton_button_text="@string/message_refuse"/>
    <com.example.jing.kapep.View.KapPendingButton
        android:id="@+id/message_button_agree"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/message_list_button_width"
        android:layout_height="@dimen/message_list_button_height"
        app:pendingButton_backcolor="@color/Bank_Blue_2f95fb"
        app:pendingButton_button_text="@string/message_agress"
        />
    // 系统消息
    <TextView
        android:id="@+id/message_systom_text"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/message_button_see"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:text="通过通讯录添加"
        android:textSize="@dimen/message_pendingbutton__textSize"
        android:textColor="@color/Bank_Blue_2f95fb"
        />
    <View
        android:layout_marginLeft="@dimen/login_edittext_interval_bigsmall_v"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listener_list_iteam_line_height"
        android:background="@color/BANK_GRAY_393939"/>
</RelativeLayout>
